# docs/swagger.json
@@ -12,7 +12,7 @@
                 "tags": [
                     "Categories"
                 ],
-                "summary": "Get all categories",
+                "summary": "GetAll all categories",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -92,7 +92,7 @@
                 "tags": [
                     "Categories"
                 ],
-                "summary": "Get category by ID",
+                "summary": "GetAll category by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -156,6 +156,34 @@
                 }
             }
         },
+        "/files": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Files"
+                ],
+                "summary": "GetAll files",
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/ingredients": {
             "get": {
                 "produces": [
@@ -164,7 +192,7 @@
                 "tags": [
                     "IngredientIDs"
                 ],
-                "summary": "Get all ingredients",
+                "summary": "GetAll all ingredients",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -199,7 +227,7 @@
                 "summary": "Create a new ingredient",
                 "parameters": [
                     {
-                        "description": "Ingredient body",
+                        "description": "IngredientRequest body",
                         "name": "ingredient",
                         "in": "body",
                         "required": true,
@@ -244,11 +272,11 @@
                 "tags": [
                     "IngredientIDs"
                 ],
-                "summary": "Get ingredient by ID",
+                "summary": "GetAll ingredient by ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Ingredient ID",
+                        "description": "IngredientRequest ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -280,7 +308,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Ingredient ID",
+                        "description": "IngredientRequest ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -342,15 +370,15 @@
                 "tags": [
                     "Recipes"
                 ],
-                "summary": "Create a new recipe",
+                "summary": "Create a new recipe with ingredients",
                 "parameters": [
                     {
-                        "description": "RecipeResponse body",
+                        "description": "Recipe data",
                         "name": "recipe",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RecipeResponse"
+                            "$ref": "#/definitions/dto.RecipeRequest"
                         }
                     }
                 ],
@@ -394,7 +422,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "RecipeResponse ID",
+                        "description": "Recipe ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -432,18 +460,18 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "RecipeResponse ID",
+                        "description": "Recipe ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "RecipeResponse body",
+                        "description": "Recipe data",
                         "name": "recipe",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RecipeResponse"
+                            "$ref": "#/definitions/dto.RecipeRequest"
                         }
                     }
                 ],
@@ -485,7 +513,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "RecipeResponse ID",
+                        "description": "Recipe ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -519,7 +547,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Upload"
+                    "Files"
                 ],
                 "summary": "Upload image file",
                 "parameters": [
@@ -578,13 +606,67 @@
                 }
             }
         },
-        "dto.Ingredient": {
+        "dto.RecipeIngredientRequest": {
             "type": "object",
             "properties": {
+                "amount": {
+                    "type": "integer"
+                },
                 "id": {
+                    "description": "ingredient_id",
+                    "type": "string"
+                },
+                "unit": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.RecipeIngredientResponse": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "id": {
+                    "description": "ingredient_id",
+                    "type": "string"
+                },
+                "image_url": {
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "unit": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.RecipeRequest": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "string"
+                },
+                "cook_time_min": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "ingredients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.RecipeIngredientRequest"
+                    }
+                },
+                "method": {
+                    "type": "string"
+                },
+                "prep_time_min": {
+                    "type": "integer"
+                },
+                "title": {
                     "type": "string"
                 }
             }
@@ -610,7 +692,7 @@
                 "ingredients": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.Ingredient"
+                        "$ref": "#/definitions/dto.RecipeIngredientResponse"
                     }
                 },
                 "method": {
@@ -628,6 +710,9 @@
             "type": "object",
             "properties": {
                 "id": {
+                    "type": "string"
+                },
+                "imageUrl": {
                     "type": "string"
                 },
                 "name": {
