# pkg/dto/recipe.go
@@ -6,32 +6,37 @@ import (
 )
 
 type RecipeResponse struct {
-	ID          string       `json:"id"`
-	Title       string       `json:"title"`
-	PrepTimeMin int          `json:"prep_time_min"`
-	CookTimeMin int          `json:"cook_time_min"`
-	Method      string       `json:"method"`
-	ImageURL    string       `json:"image_url"`
-	CreatedAt   time.Time    `json:"created_at"`
-	Category    *Category    `json:"category"`
-	Ingredients []Ingredient `json:"ingredients"`
+	ID          string                     `json:"id"`
+	Title       string                     `json:"title"`
+	PrepTimeMin int                        `json:"prep_time_min"`
+	CookTimeMin int                        `json:"cook_time_min"`
+	Method      string                     `json:"method"`
+	ImageURL    string                     `json:"image_url"`
+	CreatedAt   time.Time                  `json:"created_at"`
+	Category    *Category                  `json:"category"`
+	Ingredients []RecipeIngredientResponse `json:"ingredients"`
 }
 
 type RecipeRequest struct {
-	ID            string   `json:"id"`
-	Title         string   `json:"title"`
-	CategoryID    string   `json:"category_id"`
-	PrepTimeMin   int      `json:"prep_time_min"`
-	CookTimeMin   int      `json:"cook_time_min"`
-	Method        string   `json:"method"`
-	ImageURL      string   `json:"image_url"`
-	IngredientIDs []string `json:"ingredient_ids"`
+	Title       string                    `json:"title"`
+	CategoryID  string                    `json:"category_id"`
+	PrepTimeMin int                       `json:"prep_time_min"`
+	CookTimeMin int                       `json:"cook_time_min"`
+	Method      string                    `json:"method"`
+	ImageURL    string                    `json:"image_url"`
+	Ingredients []RecipeIngredientRequest `json:"ingredients"`
 }
 
 func NewRecipeResponseFromModel(recipe *model.RecipeCategoryIngredients) *RecipeResponse {
-	ingredients := make([]Ingredient, len(recipe.Ingredients))
+	ingredients := make([]RecipeIngredientResponse, len(recipe.Ingredients))
 	for i, ing := range recipe.Ingredients {
-		ingredients[i] = *NewIngredientFromModel(&ing)
+		ingredients[i] = RecipeIngredientResponse{
+			ID:     ing.ID,
+			Name:   ing.Name,
+			Amount: ing.Amount,
+			Unit:   ing.Unit,
+			Image:  ing.ImageURL,
+		}
 	}
 
 	category := NewCategoryFromModel(&recipe.Category)
